--- a/arch/arm/configs/titan_defconfig
+++ b/arch/arm/configs/titan_defconfig
@@ -2416,8 +2416,8 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # Texas Instruments WL128x FM driver (ST based)
 #
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=y
+CONFIG_RADIO_IRIS=m
+CONFIG_RADIO_IRIS_TRANSPORT=m
 CONFIG_ISDBT_NMI=y
 
 #
